--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,9 +14,13 @@
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "@types/node": "^18.16.0",
+    "@types/uuid": "^9.0.1",
     "cucumber-tsflow": "^4.0.0-rc.7",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
