--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "cucumber-js --profile default",
     "dev": "nodemon src/index.ts",
+    "lint": "eslint . --ext .ts",
     "clean": "rm -f fleet && rm -rf dist && rm -f *.db",
     "compile": "tsc",
     "makeExecutable": "ln -s dist/index.js fleet && chmod +x fleet",
@@ -18,7 +19,10 @@
     "@cucumber/cucumber": "^9.1.0",
     "@types/node": "^18.16.0",
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "cucumber-tsflow": "^4.0.0-rc.7",
+    "eslint": "^8.39.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
